# pyhton-anywhere-deploy

./: README.md
backend/: Readme.md  manage.py  pyproject.toml  requirements.txt
backend/accounts/: admin.py  models.py  serializers.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_useraccount_username.py  0003_profile.py  0004_delete_profile.py  0005_useraccount_date_joined_profile.py  0006_profile_date_modified_useraccount_follows.py  0007_remove_useraccount_follows.py  0008_useraccount_follows.py  0009_remove_profile_user_remove_useraccount_follows_and_more.py  0010_remove_profile_user_account_teste_and_more.py  0011_alter_profile_date_modified_alter_profile_user.py  0012_alter_profile_date_modified_alter_profile_user.py  0013_useraccount_follows_delete_profile.py  0014_profile.py  0015_alter_profile_date_modified.py  0016_remove_useraccount_follows.py  0017_useraccount_follows_delete_profile.py  0018_useraccount_date_modified.py  0019_post.py  0020_useraccount_profile_photo.py  0021_useraccount_banner.py  0022_post_image.py  0023_post_likes_alter_post_user.py  0024_post_quoted_post.py  0025_post_bio.py  0026_remove_post_bio_useraccount_bio.py  0027_post_edited.py
backend/textly/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  routes.tsx  styles.ts
frontend/src/components/Button/: index.tsx  styles.ts
frontend/src/components/FollowersList/: index.tsx  styles.ts
frontend/src/components/Loader/: index.tsx  (+1 more)
frontend/src/store/: index.tsx
(+37 files in other folders)
